--- a/css/index.css
+++ b/css/index.css
@@ -1,8 +1,6 @@
 *{
     margin: 0;
     padding: 0;
-    /* background-color: grey; */
-    /* border: 2px solid red; */
     font-size: large;
 }
 
@@ -11,13 +9,21 @@ nav{
     display: flex;
     justify-content: space-between;
     height: 40px;
+    margin-bottom: 15px;
+}
+
+h1{
+    margin: 10px;
+    flex-grow: 2;
 }
 
 body{
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: rgb(10, 185, 173) ;
     height: fit-content;
     color: white;
-    
+    background-image: url("/felix-mooneeram-evlkOfkQ5rE-unsplash.jpg");
+    background-size: cover;
 }
 
 div{
@@ -39,7 +45,7 @@ span{
 }
 
 button{
-    padding: 8px;
+    padding: 1px;
     color: #ffffff;
     transition: 0.2s;
     background: none;
@@ -47,6 +53,7 @@ button{
       cursor: pointer;
       outline: inherit;
       border-radius: 10px;
+      margin-right: 10px;
 }
 
 button:hover{
@@ -81,12 +88,10 @@ footer{
     height: 150px;
     background-color: rgb(0, 0, 0);
     display: flex;
-    /* justify-content: space-between; */
 }
 
-footer p{
-    margin-top: 20px;
-    margin-right: 10px;
+#contact{
+    margin-right: 30px;
 }
 
 .contact{
@@ -99,7 +104,11 @@ footer p{
     display: flex;
     flex-direction: column;
     gap: .25rem;
+    justify-content: center;
+    align-items: center;
+    width: 400px;
 }
+
 
 .search{
     /* padding: 20px; */
@@ -111,13 +120,9 @@ footer p{
 }
 
  #search{
-     /* align-items: center;
-     justify-content: center; */
-     /* margin-top: 7px; */
-     /* height: 20px; */
-     /* margin-left: 35%; */
      border-radius: 3px;
      border: none;
+     width: 300px;
  }
 
  #actors{
@@ -126,7 +131,7 @@ footer p{
 
  .actor-cards{
      display: grid;
-     /* grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); */
+     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); 
      gap: .25rem;
      margin-top: 2rem;
  }
@@ -139,6 +144,11 @@ footer p{
     margin-top: 3px;
     margin-right: 4px;
     width: 200px;
+    height: 100px;
+ }
+
+ .card:hover{
+     background-color: rgb(0, 155, 155);
  }
 
 .card > .header{
