--- a/css/index.css
+++ b/css/index.css
@@ -21,7 +21,7 @@ h1{
 body{
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: rgb(10, 185, 173) ;
-    height: fit-content;
+    /* height: fit-content; */
     color: white;
     background-image: url("/felix-mooneeram-evlkOfkQ5rE-unsplash.jpg");
     background-size: cover;
@@ -79,10 +79,6 @@ button:hover{
     border: 2px solid #1A1A1A;
 }
 
-.image1{
-    display: flex;
-    flex-grow: 4;
-}
 
 footer{
     margin-top: 20px;
