--- a/css/index.css
+++ b/css/index.css
@@ -21,16 +21,14 @@ h1{
 body{
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: rgb(10, 185, 173) ;
-    /* height: fit-content; */
+    height: fit-content;
     color: white;
     background-image: url("/felix-mooneeram-evlkOfkQ5rE-unsplash.jpg");
     background-size: cover;
 }
 
 div{
-    /* display: flex; */
     gap: 30px;
-    /* margin-top: 40px; */
 }
 
 .div1{
