--- a/css/index.css
+++ b/css/index.css
@@ -23,7 +23,7 @@ body{
     background-color: rgb(10, 185, 173) ;
     height: fit-content;
     color: white;
-    background-image: url("");
+    background-image: url("../images/felix-mooneeram-evlkOfkQ5rE-unsplash.jpg");
     background-size: cover;
 }
 
